🐛 fix: fixed ErrorBoundary dont display

--- a/SwashbucklerDiary/Pages/LogPage.razor
+++ b/SwashbucklerDiary/Pages/LogPage.razor
@@ -67,7 +67,7 @@
                 @item.Timestamp
                 @($"[{item.Level}]")
             </div>
-            <div>
+            <div class="my-4">
                 @item.RenderedMessage
             </div>
         }
