💄 style: update some styles

--- a/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
@@ -2,7 +2,7 @@
 @inherits DialogComponentBase
 
 <MyDialog Value="Value" ValueChanged="InternalValueChanged">
-    <MCard Rounded="@("lg")">
+    <MCard Class="rounded-t-lg">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Log.Filter"))
             <MSpacer></MSpacer>
