--- a/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
@@ -6,8 +6,7 @@
         <PPMobileDatePicker MyVisible="Value"
                             MyVisibleChanged="ValueChanged"
                             Value="Date"
-                            ValueChanged="DateChanged"
-                            class="rounded-t-lg">
+                            ValueChanged="DateChanged">
         </PPMobileDatePicker>
     </MobileContent>
     <DesktopContent>
