--- a/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
@@ -13,7 +13,7 @@
         <MMDialog MyValue="Value"
                   MyValueChanged="ValueChanged"
                   MaxWidth="420">
-            <MDatePicker @bind-Value="InternalDate"
+            <MDatePicker @bind-Value="DesktopDate"
                          Class="rounded-lg pt-4"
                          FullWidth="true"
                          NoTitle="true"
