💄 style: update some styles

--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -5,7 +5,7 @@
 <MyDialog Value="Value" ValueChanged="InternalValueChanged">
     <MCard Class="rounded-t-lg">
         <MCardTitle Class="font-weight-bold">
-            @(I18n.T("Log.Filter"))
+            @(I18n.T("Filter.Filter"))
             <MSpacer></MSpacer>
             <MButton Icon="true" OnClick="HandleOnCancel">
                 <MIcon>mdi-close</MIcon>
