--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -10,7 +10,7 @@
            Rounded="@("lg")">
         <MList>
             <MListItem>
-                <MListItemAvatar Rounded="@("lg")" Size="75" Class="mr-8 hidden-sm-and-down">
+                <MListItemAvatar Rounded="@("lg")" Size="75" Class="mr-8 hidden-xs-only">
                     <MImage Src="./logo/logo.jpg"></MImage>
                 </MListItemAvatar>
                 <MListItemContent>
