--- a/SwashbucklerDiary/Pages/LogPage.razor
+++ b/SwashbucklerDiary/Pages/LogPage.razor
@@ -48,11 +48,11 @@
     <div class="px-4 text-subtitle-1 user-select" style="word-wrap:break-word;">
         @foreach (var item in Logs)
         {
-            <div>
-                @item.Timestamp
-                @($"[{item.Level}]")
+            <div class="mb-4 font-weight-bold">
+                <span>@item.Timestamp</span>
+                <span>@($"[{item.Level}]")</span>
             </div>
-            <div class="my-4">
+            <div class="mb-10">
                 @item.RenderedMessage
             </div>
         }
