--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -84,9 +84,11 @@
 </MyDialog>
 
 <MyDatePicker @bind-Value="ShowMinDate"
-              @bind-Date="MinDate">
+              @bind-Date="MinDate"
+              Max="MaxDate">
 </MyDatePicker>
 
 <MyDatePicker @bind-Value="ShowMaxDate"
-              @bind-Date="MaxDate">
+              @bind-Date="MaxDate"
+              Min="MinDate">
 </MyDatePicker>
