--- a/SwashbucklerDiary/Components/MyComponents/SearchFilter.razor
+++ b/SwashbucklerDiary/Components/MyComponents/SearchFilter.razor
@@ -13,7 +13,7 @@ else
 {
     <MTextField TValue="string"
             Value="Search"
-            ValueChanged="InternalSearchChanged"
+            ValueChanged="SearchChanged"
             Class="ml-3 rounded-lg"
             Solo="true"
             Flat="true"
