♻️ refactor: About DateFilter and SearchFilter

--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -1,6 +1,5 @@
 ﻿@namespace SwashbucklerDiary.Components
-@inherits FilterDialogComponentBase<TValue>
-@typeparam TValue
+@inherits DialogComponentBase
 
 <MyDialog Value="Value" ValueChanged="InternalValueChanged">
     <MCard Class="rounded-t-lg">
