--- a/SwashbucklerDiary/Components/MyComponents/MySearch.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MySearch.razor
@@ -1,8 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
-@inherits FilterDialogComponentBase<TValue>
-@typeparam TValue
+@inherits DialogComponentBase
 
-@if (!Value)
+@if (ShowTitle && !Value)
 {
     <MToolbarTitle Class="font-weight-bold">
         @Title
@@ -13,14 +12,14 @@ else
 {
     <MTextField TValue="string"
             Value="Search"
-            ValueChanged="SearchChanged"
+            ValueChanged="InternalSearchChanged"
             Class="ml-3 rounded-lg"
             Solo="true"
             Flat="true"
             Autofocus="true"
             Clearable="true"
             HideDetails="@("auto")"
-            spellcheck="false"
+                spellcheck="false"
             Placeholder="@(I18n.T("Search.Placeholder"))">
     </MTextField>
 }
