💄 style: update some styles

--- a/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
@@ -6,7 +6,7 @@
           MaxWidth="420"
           @ref="myDialog">
     <MCard Rounded="@("lg")">
-        <MCardTitle>
+        <MCardTitle Class="font-weight-bold">
             @Title
             <MSpacer></MSpacer>
             <MButton Icon OnClick="HandleOnCancel">
