--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -14,7 +14,7 @@
            EnableValidation="true"
            EnableI18n="true">
         <MCard Rounded="@("lg")">
-            <MCardTitle>
+            <MCardTitle Class="font-weight-bold">
                 @(Title)
                 <MSpacer></MSpacer>
                 <MButton Icon="true" OnClick="HandleOnCancel">
