--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
@@ -3,7 +3,7 @@
 
 <MHover>
     <MCard @attributes="context.Attrs"
-           Class="@("my-3 my-sm-5 " + Class)"
+           Class="@("mb-5 my-sm-5 " + Class)"
            Elevation="@(context.Hover?"4":"2")"
            OnClick="OnClick"
            Ripple="false"
