--- a/SwashbucklerDiary/Pages/PrivacyPolicyPage.razor
+++ b/SwashbucklerDiary/Pages/PrivacyPolicyPage.razor
@@ -5,5 +5,5 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MMarkdownIt Source="@Content"></MMarkdownIt>
+    <MarkdownPreview Value="@Content"></MarkdownPreview>
 </ScrollContainer>
