--- a/SwashbucklerDiary/wwwroot/css/app.css
+++ b/SwashbucklerDiary/wwwroot/css/app.css
@@ -369,3 +369,7 @@ a, .btn-link {
 .m-ripple__animation--out {
     transition-duration: 0.15s !important;
 }
+
+.vditor-panel {
+    display: none !important;
+}
