--- a/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
@@ -5,7 +5,7 @@
      style="min-height:0;height:0;@(Style)"
      @oncontextmenu="OnContextmenu">
     <MContainer Fluid="true"
-                Class="@(ContentClass)"
+                Class="@("px-4 "+ ContentClass)"
                 Style="@($"box-sizing:border-box;{ContentStyle}")">
         @ChildContent
     </MContainer>
